-- =====================================================================
-- 오늘의직관 초기 스키마
-- 근거: docs/02_데이터모델링/schema.dbml
-- =====================================================================

-- ---------- 구장 · 팀 ----------
CREATE TABLE stadiums (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(50)  NOT NULL UNIQUE,
    name_en     VARCHAR(100),
    address     VARCHAR(255),
    capacity    INT,
    latitude    NUMERIC(10,7),
    longitude   NUMERIC(10,7)
);
COMMENT ON TABLE stadiums IS 'REQ-F-108, REQ-F-109';

CREATE TABLE teams (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name            VARCHAR(50) NOT NULL UNIQUE,
    name_en         VARCHAR(100),
    short_name      VARCHAR(10) NOT NULL,
    home_stadium_id BIGINT REFERENCES stadiums(id),
    external_ref    VARCHAR(50) UNIQUE,       -- TheSportsDB idTeam
    logo_url        VARCHAR(500),
    is_active       BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE stadium_zones (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    stadium_id  BIGINT NOT NULL REFERENCES stadiums(id),
    name        VARCHAR(50) NOT NULL,
    sort_order  INT NOT NULL DEFAULT 0,
    is_active   BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT uk_zone_stadium_name UNIQUE (stadium_id, name)
);
COMMENT ON TABLE stadium_zones IS 'REQ-F-605. 구역별 만족도 집계 단위';

-- ---------- 회원 ----------
CREATE TABLE users (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email             VARCHAR(255) UNIQUE,
    password_hash     VARCHAR(255),
    nickname          VARCHAR(30) NOT NULL UNIQUE,
    profile_image_url VARCHAR(500),
    favorite_team_id  BIGINT REFERENCES teams(id),
    role              VARCHAR(20) NOT NULL DEFAULT 'MEMBER'
                      CHECK (role IN ('MEMBER','ADMIN')),
    status            VARCHAR(20) NOT NULL DEFAULT 'ACTIVE'
                      CHECK (status IN ('ACTIVE','DORMANT','WITHDRAWN')),
    email_verified_at TIMESTAMPTZ,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    withdrawn_at      TIMESTAMPTZ
);
COMMENT ON COLUMN users.password_hash IS 'REQ-N-006 단방향 해시';

CREATE TABLE user_social_accounts (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id          BIGINT NOT NULL REFERENCES users(id),
    provider         VARCHAR(20) NOT NULL,
    provider_user_id VARCHAR(100) NOT NULL,
    linked_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_social_provider UNIQUE (provider, provider_user_id)
);

CREATE TABLE auth_tokens (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT NOT NULL REFERENCES users(id),
    type       VARCHAR(20) NOT NULL CHECK (type IN ('EMAIL_VERIFY','PASSWORD_RESET')),
    token_hash VARCHAR(255) NOT NULL UNIQUE,
    expires_at TIMESTAMPTZ NOT NULL,
    used_at    TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE user_team_history (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT NOT NULL REFERENCES users(id),
    team_id    BIGINT NOT NULL REFERENCES teams(id),
    changed_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
COMMENT ON TABLE user_team_history IS 'REQ-F-005. 응원팀 변경은 과거 기록의 승패 판정에 소급하지 않는다';

-- ---------- 경기 ----------
CREATE TABLE games (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    season_year      INT  NOT NULL,
    game_date        DATE NOT NULL,
    start_at         TIMESTAMPTZ NOT NULL,
    stadium_id       BIGINT NOT NULL REFERENCES stadiums(id),
    home_team_id     BIGINT NOT NULL REFERENCES teams(id),
    away_team_id     BIGINT NOT NULL REFERENCES teams(id),
    home_score       INT,
    away_score       INT,
    status           VARCHAR(20) NOT NULL DEFAULT 'SCHEDULED'
                     CHECK (status IN ('SCHEDULED','IN_PROGRESS','FINISHED','CANCELED','SUSPENDED')),
    source           VARCHAR(20) NOT NULL DEFAULT 'MANUAL'
                     CHECK (source IN ('EXTERNAL','MANUAL','USER_REPORT')),
    external_ref     VARCHAR(100) UNIQUE,
    synced_at        TIMESTAMPTZ,
    result_confirmed BOOLEAN NOT NULL DEFAULT FALSE,
    confirmed_at     TIMESTAMPTZ,
    created_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ck_game_teams_differ CHECK (home_team_id <> away_team_id)
);
CREATE INDEX idx_games_date ON games (game_date);
CREATE INDEX idx_games_season_home ON games (season_year, home_team_id);
CREATE INDEX idx_games_season_away ON games (season_year, away_team_id);
CREATE INDEX idx_games_confirmed ON games (result_confirmed);
COMMENT ON TABLE games IS '외부 API 동기화가 1차 출처, 사용자 제보가 2차 (REQ-F-107)';

CREATE TABLE game_result_reports (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    game_id     BIGINT NOT NULL REFERENCES games(id),
    user_id     BIGINT NOT NULL REFERENCES users(id),
    home_score  INT NOT NULL CHECK (home_score >= 0),
    away_score  INT NOT NULL CHECK (away_score >= 0),
    reported_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_report_game_user UNIQUE (game_id, user_id)
);
CREATE INDEX idx_report_tally ON game_result_reports (game_id, home_score, away_score);
COMMENT ON TABLE game_result_reports IS 'REQ-F-606, REQ-F-607. 관람 기록 작성자만 제보 가능';

CREATE TABLE game_revisions (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    game_id           BIGINT NOT NULL REFERENCES games(id),
    before_status     VARCHAR(20),
    before_home_score INT,
    before_away_score INT,
    after_status      VARCHAR(20) NOT NULL,
    after_home_score  INT,
    after_away_score  INT,
    reason            VARCHAR(255) NOT NULL,
    revised_by        BIGINT NOT NULL REFERENCES users(id),
    revised_at        TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX idx_revision_game ON game_revisions (game_id, revised_at);
COMMENT ON TABLE game_revisions IS 'REQ-F-603. 추가 전용(append-only). UPDATE/DELETE 하지 않는다';

-- ---------- 직관 기록 ----------
CREATE TABLE attendance_logs (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id         BIGINT NOT NULL REFERENCES users(id),
    game_id         BIGINT NOT NULL REFERENCES games(id),
    cheer_team_id   BIGINT REFERENCES teams(id),
    stadium_zone_id BIGINT NOT NULL REFERENCES stadium_zones(id),
    zone_rating     SMALLINT NOT NULL CHECK (zone_rating BETWEEN 1 AND 5),
    memo            VARCHAR(1000),
    game_rating     SMALLINT CHECK (game_rating BETWEEN 1 AND 5),
    ticket_cost     INT CHECK (ticket_cost >= 0),
    food_cost       INT CHECK (food_cost >= 0),
    transport_cost  INT CHECK (transport_cost >= 0),
    visibility      VARCHAR(10) NOT NULL DEFAULT 'PRIVATE'
                    CHECK (visibility IN ('PUBLIC','PRIVATE')),
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at      TIMESTAMPTZ,
    CONSTRAINT uk_log_user_game UNIQUE (user_id, game_id)
);
CREATE INDEX idx_log_user_created ON attendance_logs (user_id, created_at DESC);
CREATE INDEX idx_log_zone ON attendance_logs (stadium_zone_id);
COMMENT ON CONSTRAINT uk_log_user_game ON attendance_logs IS 'REQ-F-201 동일 경기 1건 제한';
COMMENT ON COLUMN attendance_logs.cheer_team_id IS 'NULL 이면 중립 관람 → 승패 집계 제외 (REQ-F-202)';

CREATE TABLE attendance_photos (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    attendance_log_id BIGINT NOT NULL REFERENCES attendance_logs(id) ON DELETE CASCADE,
    original_url      VARCHAR(500) NOT NULL,
    thumbnail_url     VARCHAR(500) NOT NULL,
    taken_at          TIMESTAMPTZ,
    file_size         INT,
    mime_type         VARCHAR(50),
    sort_order        INT NOT NULL DEFAULT 0,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now()
);
COMMENT ON COLUMN attendance_photos.taken_at IS 'REQ-F-204 경기 자동 매칭. 위치 메타데이터는 REQ-N-007에 따라 제거';

CREATE TABLE attendance_companions (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    attendance_log_id BIGINT NOT NULL REFERENCES attendance_logs(id) ON DELETE CASCADE,
    companion_user_id BIGINT REFERENCES users(id),
    companion_name    VARCHAR(30),
    CONSTRAINT ck_companion_identity CHECK (companion_user_id IS NOT NULL OR companion_name IS NOT NULL)
);

-- ---------- 집계 ----------
CREATE TABLE user_stats (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id       BIGINT NOT NULL REFERENCES users(id),
    dimension     VARCHAR(20) NOT NULL
                  CHECK (dimension IN ('TOTAL','SEASON','STADIUM','OPPONENT','DAY_OF_WEEK','COMPANION')),
    dimension_key VARCHAR(50) NOT NULL,
    season_year   INT NOT NULL DEFAULT 0,
    games         INT NOT NULL DEFAULT 0,
    wins          INT NOT NULL DEFAULT 0,
    draws         INT NOT NULL DEFAULT 0,
    losses        INT NOT NULL DEFAULT 0,
    total_cost    INT NOT NULL DEFAULT 0,
    updated_at    TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_stat_key UNIQUE (user_id, dimension, dimension_key, season_year)
);
COMMENT ON TABLE user_stats IS 'REQ-N-003 사전 집계. season_year=0 은 통산';

CREATE TABLE user_streaks (
    user_id        BIGINT PRIMARY KEY REFERENCES users(id),
    current_streak INT NOT NULL DEFAULT 0,
    longest_win    INT NOT NULL DEFAULT 0,
    last_game_date DATE,
    updated_at     TIMESTAMPTZ NOT NULL DEFAULT now()
);
COMMENT ON COLUMN user_streaks.current_streak IS '양수=연승, 음수=연패. 무승부는 연승을 끊지 않는다 (REQ-F-306)';

CREATE TABLE zone_stats (
    stadium_zone_id BIGINT PRIMARY KEY REFERENCES stadium_zones(id),
    rating_sum      INT NOT NULL DEFAULT 0,
    rating_count    INT NOT NULL DEFAULT 0,
    avg_rating      NUMERIC(3,2),
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT now()
);
COMMENT ON TABLE zone_stats IS 'REQ-F-110. rating_count < 임계값이면 화면에서 평균을 표시하지 않는다 (REQ-F-305)';

-- ---------- 배지 ----------
CREATE TABLE badges (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(50) NOT NULL UNIQUE,
    name        VARCHAR(50) NOT NULL,
    description VARCHAR(255),
    icon_url    VARCHAR(500)
);

CREATE TABLE user_badges (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id     BIGINT NOT NULL REFERENCES users(id),
    badge_id    BIGINT NOT NULL REFERENCES badges(id),
    achieved_at TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_user_badge UNIQUE (user_id, badge_id)
);

-- ---------- 동행 ----------
CREATE TABLE companion_posts (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    game_id         BIGINT NOT NULL REFERENCES games(id),
    author_id       BIGINT NOT NULL REFERENCES users(id),
    intro           VARCHAR(500),
    capacity        INT NOT NULL CHECK (capacity BETWEEN 2 AND 10),
    confirmed_count INT NOT NULL DEFAULT 1,
    status          VARCHAR(20) NOT NULL DEFAULT 'OPEN'
                    CHECK (status IN ('OPEN','FULL','CLOSED','ENDED')),
    version         INT NOT NULL DEFAULT 0,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    closed_at       TIMESTAMPTZ,
    CONSTRAINT ck_post_capacity CHECK (confirmed_count <= capacity)
);
CREATE INDEX idx_post_game_status ON companion_posts (game_id, status);
COMMENT ON CONSTRAINT ck_post_capacity ON companion_posts IS 'REQ-F-504 정원 초과 확정 방지 (DB 최종 방어선)';
COMMENT ON COLUMN companion_posts.version IS 'REQ-N-011 낙관적 락';

CREATE TABLE companion_applications (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    companion_post_id BIGINT NOT NULL REFERENCES companion_posts(id),
    user_id           BIGINT NOT NULL REFERENCES users(id),
    status            VARCHAR(20) NOT NULL DEFAULT 'CONFIRMED'
                      CHECK (status IN ('CONFIRMED','CANCELED')),
    seq               INT NOT NULL,
    applied_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    canceled_at       TIMESTAMPTZ,
    CONSTRAINT uk_application_post_user UNIQUE (companion_post_id, user_id)
);

-- ---------- 관람 계획 ----------
CREATE TABLE viewing_plans (
    id                BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id           BIGINT NOT NULL REFERENCES users(id),
    season_year       INT NOT NULL,
    target_count      INT NOT NULL CHECK (target_count > 0),
    budget_total      INT,
    max_cost_per_game INT,
    available_days    VARCHAR(30),
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_plan_user_season UNIQUE (user_id, season_year)
);

CREATE TABLE viewing_plan_stadiums (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    viewing_plan_id BIGINT NOT NULL REFERENCES viewing_plans(id) ON DELETE CASCADE,
    stadium_id      BIGINT NOT NULL REFERENCES stadiums(id),
    CONSTRAINT uk_plan_stadium UNIQUE (viewing_plan_id, stadium_id)
);

CREATE TABLE viewing_plan_items (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    viewing_plan_id BIGINT NOT NULL REFERENCES viewing_plans(id) ON DELETE CASCADE,
    game_id         BIGINT NOT NULL REFERENCES games(id),
    status          VARCHAR(20) NOT NULL DEFAULT 'PROPOSED'
                    CHECK (status IN ('PROPOSED','CONFIRMED','DONE','MISSED')),
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uk_plan_item UNIQUE (viewing_plan_id, game_id)
);

-- ---------- 알림 ----------
CREATE TABLE notifications (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT NOT NULL REFERENCES users(id),
    type       VARCHAR(30) NOT NULL,
    title      VARCHAR(100) NOT NULL,
    body       VARCHAR(255),
    link_url   VARCHAR(255),
    read_at    TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX idx_notification_user ON notifications (user_id, created_at DESC);
